Saving post data

--- a/gh-weblog/content/posts/markdown/2024-10-14-17-07-43.md
+++ b/gh-weblog/content/posts/markdown/2024-10-14-17-07-43.md
@@ -1,36 +1,38 @@
 # Updating my blog platform
 
-I updated my blog platform, for reasons. One of them being the current Wordpress shenanigans,  causing the most important person in my life to go "...didn't you have a github-hosted blog? Is that something I can use too?" and while her eventual solution was to discover that I have a Dreamhost account that comes with a free hosted self-managed WP install (so she can stop funding Automaticc), I spent a bunch of time trying to clean up my blog code so it could be used by others again. 
+I updated my blog platform, for reasons. One of them being the current Wordpress shenanigans,  causing the most important person in my life to go "...didn't you have a GitHub-hosted blog? Is that something I can use too?" and while her eventual solution was to discover that I have a Dreamhost account that comes with a free hosted self-managed WP install (so she can stop funding Automaticc), I spent a bunch of time trying to clean up my blog code so it could be used by others again. 
 
 I originally wrote it back in 2014 back when React was still on version 0.12, and revisiting the code it's incredible to see how much nicer React was back then, compared to the monster it has become since. So I decided to rewrite it, but keep it React 0.12, and honest, I wish there was a modern "classic React" library, but JS doesn't stop working this should keep working forever just fine. 
 
 ### How does it work?
 
-Some architecture info: my blog platform uses github as its backend, but _it_ uses github as a backend, you don't. It has a simple "swap out post for a markdown editor" interface when you create/edit posts, and when you save your post the client-side code literally posts commits to github, and then github runs its github pages deploy and things just work. Of course, this requires a bit more than just "save your post":
+Some architecture info: my blog platform uses GitHub as its backend, but _it_ uses GitHub as a backend, you don't. It has a simple "swap out post for a markdown editor" interface when you create/edit posts, and when you save your post the client-side code literally posts commits to GitHub, and then GitHub runs its GitHub pages deploy and things just work. Of course, this requires a bit more than just "save your post":
 
 1. the code saves your post text
 1. it also saves post metadata like title, created_at, updated_at, tags, etc.
 1. it also saves an updated index of all posts in the blog, consisting of only the post id, title, and tags, so that even if you're only looking at a handful (or one) post, it can show you the entire post history as a ToC
 1. it also saves an updated RSS.xml file
-1. and finally, it saves redirects. Github pages don't come with mod_rewrite or a redirect table, so instead that's done using actual files.
+1. and finally, it saves redirects. GitHub pages don't come with mod_rewrite or a redirect table, so instead that's done using actual files.
 
 Edits do the same thing, and deletes run those in reverse: all files that got written are committed as "deleted", and the post is stripped from the index so that the index and RSS.xml files no longer include it.
 
-### Making the browser talk to Github
+### Making the browser talk to GitHub
 
-The thing I did really have to update was the GithubAPI connector: back in 2014 there was no official JS API for Github. [Phil Schatz](https://philschatz.com) had just released [octokit](https://philschatz.com/2013/03/10/octokit), using the same name as Github's official API libraries for "not JS" languages, which because [octokat](https://philschatz.com/2014/05/25/octokat/) not too long after once Github realised that maybe it would make sense to offer their octokit library in the language used by the overwhelming majority of web developers so now [octokit is an official Github release](https://www.npmjs.com/package/octokit), but by the time they pulled that trigger, my blog worked and I had no reason to upgrade.
+The thing I did really have to update was the Github API connector: back in 2014 there _was_ no official JS API for GitHub.
 
-But now I do, and it's frankly a bit of a shit experience, but it works, and it's got support, so... yay? You have three options:
+[Phil Schatz](https://philschatz.com) had just released [octokit](https://philschatz.com/2013/03/10/octokit), using the same name as Github's official API libraries for "not JS" languages, which became [octokat](https://philschatz.com/2014/05/25/octokat/) not too long after, when Github realised that maybe it would make sense to offer their octokit library in the language used by the overwhelming majority of web developers, and the octokit project got handed over to GitHub (so now [octokit is an official Github release](https://www.npmjs.com/package/octokit)) but by the time all of that happened I was already done writing my blog and I had no reason to upgrade.
 
-1. use the `requests` based API, where you write http verbs and enpoint URLs. E.g. `await octokit.request(`GET /repos/${user}/${repo}/actions/runs`)`,
-1. use the rest API extension, so you can write `await octokit.repos(user, repo).actions.runs()`, or
-1. use a plugin if there is one for the exact thing you want, like "uploading a text file without manually running every git step", e.g. `    await octokit.createOrUpdateTextFile({ owner, repo, branch, path: `${this.path}/rss.xml`, content: rss, message: `Update to RSS` });`
+However, now I do, and the official API is frankly a bit of a shit experience? But it works, and it's got support, so... "yay"? You have three options:
 
-For most of this blog's work, the latter is perfectly adequate (although I do [wish it supported createOrUpdateTextFiles`, plural](https://github.com/octokit/plugin-create-or-update-text-file.js/issues/295#issuecomment-2408704495)), so the client-side code simply figures out which files need to be written with what content, and sends those off as commits. Then it uses option 1 to poll the `actions` endpoint to see if the gh pages deploy (which github automatically kicks off without a workflow file - handy!) has finished yet, and colours the admin button red to let you know others won't see your content yet because the website's still rebuilding.
+1. use the `requests` based API, where you write http verbs and enpoint URLs. E.g. ``await octokit.request(`GET /repos/${user}/${repo}/actions/runs`)``,
+1. use the rest API extension, so you can write ``await octokit.repos(user, repo).actions.runs()``, or
+1. use a plugin if there is one for the exact thing you want, like "uploading a text file without manually running every git step", e.g. ``await octokit.createOrUpdateTextFile({ owner, repo, branch, path: `${this.path}/rss.xml`, content: rss, message: `Update to RSS` });``
+
+For most of this blog's work, the latter is perfectly adequate (although I do [wish it supported createOrUpdateTextFiles](https://github.com/octokit/plugin-create-or-update-text-file.js/issues/295#issuecomment-2408704495), plural), so the client-side code simply figures out which files need to be written with what content, and sends those off as commits. Then it uses option 1 to poll the `actions` endpoint to see if the GitHub pages deploy (which GitHub automatically kicks off without a workflow file - handy!) has finished yet, and colours the admin button red to let you know others won't see your content yet because the website's still rebuilding.
 
 #### "how does it authenticate?"
 
-Auth uses a fine-grained GH token. Another thing that didn't exist back in 2014: you could generate a token and give that commit write access, and good news you just allowed that for every single repo you had access to. It was... insane? It took Github way too long to finally add normal tokens that let you specify exactly which repo(s) it should apply to, but [now that we have those](https://github.com/settings/tokens?type=beta): 
+Auth uses a fine-grained GitHub token. Another thing that didn't exist back in 2014: you could generate a token and give that commit write access, and good news you just allowed that for every single repo you had access to. It was... insane? It took GitHub way too long to finally add normal tokens that let you specify exactly which repo(s) it should apply to, but [now that we have those](https://github.com/settings/tokens?type=beta): 
 
 1. you click the admin button
 1. you fill in your username, repo name, gh-pages branch, the subdir your gh-weblog content should live in, and that token
@@ -60,7 +62,7 @@ And then the homepage sees it's supposed to load a single post, runs a `history.
 
 The one thing I've not re-uplifted is image drag-and-drop so that I can just drag images into my blog posts as I'm writing them. It's not a ton of work, but it's also not trivial, as there are no convenience plugins available for that, so to upload an image "on drop", you need to:
 
-1. create a blob on github
+1. create a blob on GitHub
 1. get the blob sha
 1. create a commit tree for that blob
 1. create a commit to put that commit tree into
