--- a/gh-weblog/content/posts/markdown/2024-10-14-17-07-43.md
+++ b/gh-weblog/content/posts/markdown/2024-10-14-17-07-43.md
@@ -73,7 +73,7 @@ Everything in that list is entirely doable but also the kind of pain I'd rather 
 
 ### post folding
 
-Post folds are a pure HTML+CSS solution, no JS involved. It exploits the fact that `<details>` has been part of HTML 5 since its release, so if a post is over 1500 characters, the first few paragraphs are wrapped in a `<summary>` tag, and then CSS is used to replace the usual "drop down triangle" to the left of the summary into a normal looking "show entire post" button at the bottom instead. Click it, and the  full `<details>` element becomes visible, with some CSS that removes the button using the `details[open]` selector.
+Post folds are a pure HTML+CSS solution, no JS involved. It exploits the fact that the `<details>` element has been part of HTML 5 since its release, so if a post is over 1500 characters, the first few paragraphs are wrapped in a `<summary>` tag, and then CSS is used to replace the usual "drop down triangle" to the left of the summary into a normal looking "show entire post" button at the bottom instead. Click it, and the  full `<details>` element becomes visible, with some CSS that removes the button using the `details[open]` selector.
 
 No-JS solutions are the best solutions, even if your website *relies* on JS to work at all. Heck, I'd argue _especially_ when your site relies on JS, you should aim to not use JS as much as possible.
 
