Saving post data

--- a/gh-weblog/content/posts/markdown/2025-03-12-20-59-13.md
+++ b/gh-weblog/content/posts/markdown/2025-03-12-20-59-13.md
@@ -1,6 +1,6 @@
 # Writing a mahjong tutorial
 
-I'm currently in the process of writing a tutorial on how to implement a multiplayer version of "real" mahjong (the four player draw-one, play-one game), and while it feels like I'm nearing completion, I started this before Christmas and if you're familiar with [my other writing](https://pomax.github.io/bezierinfo) then [you might understand](https://pomax.github.io/are-we-flying) why it's taken so long.
+I'm currently in the process of writing a tutorial on how to implement a multiplayer version of "real" [mahjong](https://en.wikipedia.org/wiki/Mahjong) (the four player draw-one, play-one game), and while it feels like I'm nearing completion, I started this before Christmas and if you're familiar with [my other writing](https://pomax.github.io/bezierinfo) then [you might understand](https://pomax.github.io/are-we-flying) why it's taken so long.
 
 This tutorial covers:
 
